cmake_minimum_required(VERSION 3.30)
project(LabCpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(LabCpp main.cpp
        zlab02.cpp
        zlab02.h
        zlab03.cpp
        zlab03.h
        organizm.cpp
        organizm.h
        samochod.cpp
        samochod.h
        ustawienia.h
        zapaswody.cpp
        zapaswody.h
        sasiedztwo.cpp
        sasiedztwo.h
        GeneratorLosowy.cpp
        GeneratorLosowy.h
        UrzadzenieElektryczne.cpp
        UrzadzenieElektryczne.h
        ZLab06.cpp
        ZLab06.h
        Mieszkaniec.cpp
        Mieszkaniec.h
        osobniki.cpp
        osobniki.h
        Nisza.cpp
        Nisza.h)
